apps/staging/luffy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: luffy
  labels:
    pod-security.kubernetes.io/enforce: restricted
