apps/staging/luffy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luffy-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - luffy.cloudlab.rahatahsan.com
      secretName: luffy-tls
  rules:
    - host: luffy.cloudlab.rahatahsan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: luffy-n8n
                port:
                  number: 3008
